--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "node server.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
