--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
 
-PORT = 8080
+PORT = 5173
 DB_NAME= 'candidature'
-URI_MONGO = 'mongodb://localhost:27017'
+URI_MONGO = 'mongodb+srv://nerminekh:nermine321@tpnode.3xapw.mongodb.net/?retryWrites=true&w=majority&appName=TPnode'
